--- a/res/values/pixys_strings.xml
+++ b/res/values/pixys_strings.xml
@@ -220,4 +220,7 @@
     <string name="volume_link_notification_title">Link ring &amp; notification volumes</string>
     <string name="ring_volume_title_split">Ring volume</string>
 
+    <!-- Battery stats reset -->
+    <string name="battery_stats_reset">Reset stats</string>
+    <string name="battery_stats_message">Battery history stats are going to be reset</string>
 </resources>
